--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,12 +2,12 @@
   "dependencies": {
     "com.unity.ide.visualstudio": "2.0.16",
     "com.unity.inputsystem": "1.3.0",
-    "com.unity.terrain-tools": "3.0.2-preview.3",
+    "com.unity.terrain-tools": "4.0.3",
     "com.unity.textmeshpro": "3.0.6",
-    "com.unity.timeline": "1.4.8",
+    "com.unity.timeline": "1.6.4",
     "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.2",
     "com.unity.ugui": "1.0.0",
-    "com.unity.xr.oculus": "1.11.2",
+    "com.unity.xr.oculus": "3.0.2",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
